@@ -188,7 +188,12 @@ if (isset($_GET["oracle"])) {
 	}
 
 	function get_databases() {
-		return get_vals("SELECT tablespace_name FROM user_tablespaces ORDER BY 1");
+		return get_vals("SELECT DISTINCT tablespace_name FROM (
+SELECT tablespace_name FROM user_tablespaces
+UNION SELECT tablespace_name FROM all_tables WHERE tablespace_name IS NOT NULL
+)
+ORDER BY 1"
+		);
 	}
 
 	function limit($query, $where, $limit, $offset = 0, $separator = " ") {
